--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,7 @@ jobs:
   Continuous-Deployment:
     needs: Continuous-Integration
     runs-on: ubuntu-22.04
-    if: github.event_name == 'pull_request' && github.base_ref == 'main'
+    if: github.event.pull_request.merged == true && github.base_ref == 'main'
     steps:
       - name: Dummy Deploy Step
         run: |
